--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-      <title>Incremental Balls</title>
+      <title>Idle Balls Special</title>
       <script defer src="js/main.js"></script>
-      <script src="//cdn.rawgit.com/erosson/swarm-numberformat/v0.1.0/dist/swarm-numberformat.js"></script>
+       <script src="//cdn.jsdelivr.net/gh/keanu246/idleformat@v1.0.0/dist/swarm-numberformat.js"></script>
       <link rel="stylesheet" href="css/style.css">
       <div>
           <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46297477-3"></script>
@@ -42,15 +42,15 @@
       <div id="Balls" class="tabcontent">
         <button class = "click" type = "button" onClick = "clickLevel()" style="width:48%;">Upgrade Bonds<br><b>Cost: <span id="CC">10</span></b><br><i>Rank: <span id="CA">1</span></i></button><br><br>
         <button class = "upgrade" type = "button" onClick = "levelBall(0)"><span id="0T">Buy</span> Blue Ball <br><b>Cost: <span id="0C">10</span></b><br><i>Rank: <span id="0A">0</span></i></button>
-        <button class = "upgrade" type = "button" onClick = "levelBall(1)"><span id="1T">Buy</span> Green Ball <br><b>Cost: <span id="1C">1000</span></b><br><i>Rank: <span id="1A">0</span></i></button>
-        <button class = "upgrade" type = "button" onClick = "levelBall(2)"><span id="2T">Buy</span> Red Ball <br><b>Cost: <span id="2C">100 thousand</span></b><br><i>Rank: <span id="2A">0</span></i></button>
-        <button class = "upgrade" type = "button" onClick = "levelBall(3)"><span id="3T">Buy</span> Yellow Ball <br><b>Cost: <span id="3C">10 million</span></b><br><i>Rank: <span id="3A">0</span></i></button>
-        <button class = "upgrade" type = "button" onClick = "levelBall(4)"><span id="4T">Buy</span> Orange Ball <br><b>Cost: <span id="4C">1 billion</span></b><br><i>Rank: <span id="4A">0</span></i></button>
-        <button class = "upgrade" type = "button" onClick = "levelBall(5)"><span id="5T">Buy</span> Purple Ball <br><b>Cost: <span id="5C">100 billion</span></b><br><i>Rank: <span id="5A">0</span></i></button>
-        <button class = "upgrade" type = "button" onClick = "levelBall(6)"><span id="6T">Buy</span> Cyan Ball <br><b>Cost: <span id="6C">10 trillion</span></b><br><i>Rank: <span id="6A">0</span></i></button>
-        <button class = "upgrade" type = "button" onClick = "levelBall(7)"><span id="7T">Buy</span> Pink Ball <br><b>Cost: <span id="7C">1 quadrillion</span></b><br><i>Rank: <span id="7A">0</span></i></button>
-        <button class = "upgrade" type = "button" onClick = "levelBall(8)"><span id="8T">Buy</span> Turquoise Ball <br><b>Cost: <span id="8C">100 quadrillion</span></b><br><i>Rank: <span id="8A">0</span></i></button>
-        <button class = "upgrade" type = "button" onClick = "levelBall(9)"><span id="9T">Buy</span> Maroon Ball <br><b>Cost: <span id="9C">10 quintillion</span></b><br><i>Rank: <span id="9A">0</span></i></button>
+        <button class = "upgrade" type = "button" onClick = "levelBall(1)"><span id="1T">Buy</span> Green Ball <br><b>Cost: <span id="1C">50000</span></b><br><i>Rank: <span id="1A">0</span></i></button>
+        <button class = "upgrade" type = "button" onClick = "levelBall(2)"><span id="2T">Buy</span> Red Ball <br><b>Cost: <span id="2C">15 M</span></b><br><i>Rank: <span id="2A">0</span></i></button>
+        <button class = "upgrade" type = "button" onClick = "levelBall(3)"><span id="3T">Buy</span> Yellow Ball <br><b>Cost: <span id="3C">3 B</span></b><br><i>Rank: <span id="3A">0</span></i></button>
+        <button class = "upgrade" type = "button" onClick = "levelBall(4)"><span id="4T">Buy</span> Orange Ball <br><b>Cost: <span id="4C">600 B</span></b><br><i>Rank: <span id="4A">0</span></i></button>
+        <button class = "upgrade" type = "button" onClick = "levelBall(5)"><span id="5T">Buy</span> Purple Ball <br><b>Cost: <span id="5C">75 T</span></b><br><i>Rank: <span id="5A">0</span></i></button>
+        <button class = "upgrade" type = "button" onClick = "levelBall(6)"><span id="6T">Buy</span> Cyan Ball <br><b>Cost: <span id="6C">10 Q</span></b><br><i>Rank: <span id="6A">0</span></i></button>
+        <button class = "upgrade" type = "button" onClick = "levelBall(7)"><span id="7T">Buy</span> Pink Ball <br><b>Cost: <span id="7C">2 QQ</span></b><br><i>Rank: <span id="7A">0</span></i></button>
+        <button class = "upgrade" type = "button" onClick = "levelBall(8)"><span id="8T">Buy</span> Turquoise Ball <br><b>Cost: <span id="8C">800 QQ</span></b><br><i>Rank: <span id="8A">0</span></i></button>
+        <button class = "upgrade" type = "button" onClick = "levelBall(9)"><span id="9T">Buy</span> Maroon Ball <br><b>Cost: <span id="9C">1 SS</span></b><br><i>Rank: <span id="9A">0</span></i></button>
         <p class = "small" id="p3">Your ball clones every 50 ranks and gets much stronger every 100 ranks. The latter also applies for your clicks. Your game saves automatically evey 1 minute.</p>
       </div>
       <div id="Tutorial" class="tabcontent">
