--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
         <button class = "upgrade" type = "button" onClick = "levelBall(4)"><span id="4T">Buy</span> Orange Ball <br><b>Cost: <span id="4C">600 B</span></b><br><i>Rank: <span id="4A">0</span></i></button>
         <button class = "upgrade" type = "button" onClick = "levelBall(5)"><span id="5T">Buy</span> Purple Ball <br><b>Cost: <span id="5C">75 T</span></b><br><i>Rank: <span id="5A">0</span></i></button>
         <button class = "upgrade" type = "button" onClick = "levelBall(6)"><span id="6T">Buy</span> Cyan Ball <br><b>Cost: <span id="6C">10 Q</span></b><br><i>Rank: <span id="6A">0</span></i></button>
-        <button class = "upgrade" type = "button" onClick = "levelBall(7)"><span id="7T">Buy</span> Pink Ball <br><b>Cost: <span id="7C">2 QQ</span></b><br><i>Rank: <span id="7A">0</span></i></button>
+        <button class = "upgrade" type = "button" onClick = "levelBall(7)"><span id="7T">Buy</span> Pink Ball <br><b>Cost: <span id="7C">2.5 QQ</span></b><br><i>Rank: <span id="7A">0</span></i></button>
         <button class = "upgrade" type = "button" onClick = "levelBall(8)"><span id="8T">Buy</span> Turquoise Ball <br><b>Cost: <span id="8C">800 QQ</span></b><br><i>Rank: <span id="8A">0</span></i></button>
         <button class = "upgrade" type = "button" onClick = "levelBall(9)"><span id="9T">Buy</span> Maroon Ball <br><b>Cost: <span id="9C">1 SS</span></b><br><i>Rank: <span id="9A">0</span></i></button>
+        <button class = "upgrade" type = "button" onClick = "levelBall(10)"><span id="10T">Buy</span> Black Ball <br><b>Cost: <span id="10C">400 SS</span></b><br><i>Rank: <span id="10A">0</span></i></button>
+        <button class = "upgrade" type = "button" onClick = "levelBall(11)"><span id="11T">Buy</span> Silver Ball <br><b>Cost: <span id="11C">1.5 N</span></b><br><i>Rank: <span id="11A">0</span></i></button>
         <p class = "small" id="p3">Your ball clones every 50 ranks and gets much stronger every 100 ranks. The latter also applies for your clicks. Your game saves automatically evey 1 minute.</p>
       </div>
       <div id="Tutorial" class="tabcontent">
