--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         <button class = "prestige" type = "button" onClick = "prestigeUpgrade(11)">Increase your starting level by 5<br><b>Costs: <span id = "11b">10</span> BP</b><br><i>Current starting level is <span id = "11p">0</span></i></button>
         <button class = "prestige" type = "button" onClick = "prestigeUpgrade(12)">Increase bonus per BallPoint by 10%<br><b>Costs: <span id = "12b">5</span> BP</b><br><i>Current income bonus is <span id = "12p">100</span>%</i></button>
         <p class ="large" id = "p8">Orb of Skill Upgrades</p>
-        <button class = "prestige" type = "button" onClick = "prestigeUpgrade(13)">Add 1 ball to your ball tab<br><b>Costs: <span id = "13b">1</span> BP</b><br><i>Current starting amount is <br><span id = "13p">10</span></i></button>
-        <button class = "prestige" type = "button" onClick = "prestigeUpgrade(14)">Reduce cost of balls by ×1.5 less<br><b>Costs: <span id = "14b">1</span> BP</b><br><i>Current radius multiplier is <span id = "14p">100</span>%</i></button>
+        <button class = "prestige" type = "button" onClick = "prestigeUpgrade(13)">Boosts damage of balls by ×1.25 more<br><b>Costs: <span id = "13b">10</span> BP</b><br><i>Current ball damage amount is <br><span id = "13p">10</span></i></button>
+        <button class = "prestige" type = "button" onClick = "prestigeUpgrade(14)">Reduce cost of balls by ×1.25 less<br><b>Costs: <span id = "14b">10</span> BP</b><br><i>Current cost multiplier is <span id = "14p">100</span>%</i></button>
       </div>
       <div class="tabcontent" id="Changelog">
         <h1>12/5/2017</h1>
