--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
       <title>Idle Balls Special</title>
       <script defer src="js/main.js"></script>
-       <script src="//cdn.jsdelivr.net/gh/keanu246/idleformat@v1.1.1/dist/swarm-numberformat.js"></script>
+       <script src="//cdn.jsdelivr.net/gh/keanu246/idleformat@v1.2.0/dist/swarm-numberformat.js"></script>
       <link rel="stylesheet" href="css/style.css">
       <div>
           <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46297477-3"></script>
@@ -53,6 +53,7 @@
         <button class = "upgrade" type = "button" onClick = "levelBall(9)"><span id="9T">Buy</span> Maroon Ball <br><b>Cost: <span id="9C">1 SS</span></b><br><i>Rank: <span id="9A">0</span></i></button>
         <button class = "upgrade" type = "button" onClick = "levelBall(10)"><span id="10T">Buy</span> Black Ball <br><b>Cost: <span id="10C">400 SS</span></b><br><i>Rank: <span id="10A">0</span></i></button>
         <button class = "upgrade" type = "button" onClick = "levelBall(11)"><span id="11T">Buy</span> Silver Ball <br><b>Cost: <span id="11C">1.5 N</span></b><br><i>Rank: <span id="11A">0</span></i></button>
+        <button class = "upgrade" type = "button" onClick = "levelBall(12)"><span id="12T">Buy</span> Brown Ball <br><b>Cost: <span id="12C">5.5 D</span></b><br><i>Rank: <span id="12A">0</span></i></button>
         <p class = "small" id="p3">Your ball clones every 50 ranks and gets much stronger every 100 ranks. The latter also applies for your clicks. Your game saves automatically evey 1 minute.</p>
       </div>
       <div id="Tutorial" class="tabcontent">
