--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <button class = "upgrade" type = "button" onClick = "levelBall(10)"><span id="10T">Buy</span> Black Ball <br><b>Cost: <span id="10C">400 SS</span></b><br><i>Rank: <span id="10A">0</span></i></button>
         <button class = "upgrade" type = "button" onClick = "levelBall(11)"><span id="11T">Buy</span> Silver Ball <br><b>Cost: <span id="11C">1.5 N</span></b><br><i>Rank: <span id="11A">0</span></i></button>
         <button class = "upgrade" type = "button" onClick = "levelBall(12)"><span id="12T">Buy</span> Brown Ball <br><b>Cost: <span id="12C">5.5 D</span></b><br><i>Rank: <span id="12A">0</span></i></button>
+        <button class = "upgrade" type = "button" onClick = "levelBall(13)"><span id="13T">Buy</span> Gold Ball <br><b>Cost: <span id="13C">18 U</span></b><br><i>Rank: <span id="13A">0</span></i></button>
         <p class = "small" id="p3">Your ball clones every 50 ranks and gets much stronger every 100 ranks. The latter also applies for your clicks. Your game saves automatically evey 1 minute.</p>
       </div>
       <div id="Tutorial" class="tabcontent">
