--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <button class="tablinks" onclick="switchTab(event, 'Tutorial')">Tutorial</button>
         <button class="tablinks" onclick="switchTab(event, 'Changelog')">Changelog</button>
         <button class="tablinks" onclick="switchTab(event, 'Leaderboard')">Leaderboard</button>
+        <button class="tablinks" onclick="switchTab(event, 'Special')">Special</button>
         <button class="tablinks" onclick="switchTab(event, 'Options')">Options</button>
       </div>
       <div id="Balls" class="tabcontent">
