--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <script defer src="js/main.js"></script>
       <script src="//cdn.jsdelivr.net/gh/keanu246/idleformat@v1.3.0/dist/swarm-numberformat.js"></script>
       <link rel="stylesheet" href="css/style.css">
-      <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
       <div>
           <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46297477-3"></script>
           <script>
