--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
         <h1>11/16/2017</h1>
         <p>Added boss animations, added ball clones, added strengh boosts, imporved design.</p>
       </div>
+      <div id="Special" class="tabcontent">
+        <button class = "upgrade" type = "button" onClick = "levelBall(14)"><span id="14T">Buy</span> Silver Ball <br><b>Cost: <span id="14C">100 C</span></b><br><i>Rank: <span id="14A">0</span></i></button>
+        <button class = "upgrade" type = "button" onClick = "levelBall(15)"><span id="15T">Buy</span> Teal Ball <br><b>Cost: <span id="15C">10 D</span></b><br><i>Rank: <span id="15A">0</span></i></button>    
+      </div>
       <div class="tabcontent" id="Leaderboard">
         <p class="small"> Will have to host an entirely new server for this so might take a while</p>
       </div>
